# openrdate

./: AUTHORS  CONTRIBUTING.md  COPYING  ChangeLog  HISTORY  LICENSE  Makefile.am  Makefile.in  NEWS  README.md  arc4random.c  arc4random.h  autogen.sh  config.h.in  configure  configure.ac  ntp.c  rdate.c
.github/workflows/: ccpp.yml  full-check.yml
docs/: Makefile.am  Makefile.in  UPDATE-CHECK  create-man.sh  rdate.8  rdate.txt
src/: Makefile.am  Makefile.in  arc4random.c  arc4random.h  ntp.c  ntpleaps.c  ntpleaps.h  rdate.c  rfc868time.c
